Created base CMakeLists.txt. Pointing to src directory.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -5,4 +5,5 @@ project(fermion-bag-HLFT)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_executable(main main.cpp)
+add_subdirectory(src)
+
