--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(main main.cpp)
 
 # Add subdirectories
 add_subdirectory(algorithms)
+add_subdirectory(configuration)
 add_subdirectory(models)
 add_subdirectory(utils)
 add_subdirectory(tests)
@@ -13,6 +14,7 @@ add_subdirectory(tests)
 target_link_libraries(main
   PRIVATE
     algorithms_lib
+    configuration_lib
     models_lib
     utils_lib
 )
@@ -21,6 +23,7 @@ target_link_libraries(main
 target_include_directories(main
   PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/algorithms
+    ${CMAKE_CURRENT_SOURCE_DIR}/configuration
     ${CMAKE_CURRENT_SOURCE_DIR}/models
     ${CMAKE_CURRENT_SOURCE_DIR}/utils
 )
