Created all Bond tests and some Configuration tests.

--- a/cpp/src/tests/CMakeLists.txt
+++ b/cpp/src/tests/CMakeLists.txt
@@ -1,10 +1,15 @@
 # src/tests
 
 # Add the test executable
-add_executable(tests_main tests_main.cpp)
+add_executable(tests_main 
+  tests_main.cpp
+  configuration/BondTests.cpp
+  configuration/ConfigurationTests.cpp
+)
 
 # Add subdirectories
 add_subdirectory(algorithms)
+add_subdirectory(configuration)
 add_subdirectory(models)
 add_subdirectory(utils)
 
@@ -12,6 +17,7 @@ add_subdirectory(utils)
 target_link_libraries(tests_main
   PRIVATE
     algorithms_test_lib
+    configuration_test_lib
     models_test_lib
     utils_test_lib
     algorithms_lib
@@ -22,6 +28,7 @@ target_link_libraries(tests_main
 
 target_include_directories(tests_main PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/algorithms
+  ${CMAKE_CURRENT_SOURCE_DIR}/configuration
   ${CMAKE_CURRENT_SOURCE_DIR}/models
   ${CMAKE_CURRENT_SOURCE_DIR}/utils
 )
