--- a/cpp/src/tests/configuration/CMakeLists.txt
+++ b/cpp/src/tests/configuration/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_library(configuration_test_lib ConfigurationTests.cpp BondTests.cpp)
-target_include_directories(configuration_test_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(configuration_test_lib PUBLIC 
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_SOURCE_DIR}/src/configuration
+)
