--- a/cpp/src/configuration/CMakeLists.txt
+++ b/cpp/src/configuration/CMakeLists.txt
@@ -1,4 +1,4 @@
 # src/configuration/CMakeLists.txt
 
-add_library(configuration_lib Configuration.cpp Bond.cpp)
+add_library(configuration_lib Configuration.cpp Bond.cpp Lattice.cpp)
 target_include_directories(configuration_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
