--- a/cpp/src/tests/CMakeLists.txt
+++ b/cpp/src/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(tests_main
 # Add subdirectories
 add_subdirectory(algorithms)
 add_subdirectory(configuration)
+add_subdirectory(io)
 add_subdirectory(models)
 add_subdirectory(utils)
 
@@ -16,10 +17,12 @@ target_link_libraries(tests_main
   PRIVATE
     algorithms_test_lib
     configuration_test_lib
+    io_test_lib
     models_test_lib
     utils_test_lib
     algorithms_lib
     configuration_lib
+    io_lib
     models_lib
     utils_lib
 )
@@ -27,6 +30,7 @@ target_link_libraries(tests_main
 target_include_directories(tests_main PRIVATE
   ${CMAKE_SOURCE_DIR}/src/algorithms
   ${CMAKE_SOURCE_DIR}/src/configuration
+  ${CMAKE_SOURCE_DIR}/src/io
   ${CMAKE_SOURCE_DIR}/src/models
   ${CMAKE_SOURCE_DIR}/src/utils
 )
