Beginning to use  input parser in InputTests.cpp. Reorganized some incorrectly placed files.

--- a/cpp/src/io/CMakeLists.txt
+++ b/cpp/src/io/CMakeLists.txt
@@ -2,3 +2,6 @@
 
 add_library(io_lib InputParser.cpp)
 target_include_directories(io_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(io_lib 
+  PRIVATE yaml-cpp
+)
