--- a/cpp/src/tests/configuration/CMakeLists.txt
+++ b/cpp/src/tests/configuration/CMakeLists.txt
@@ -1,6 +1,5 @@
-add_library(configuration_test_lib BondTests.cpp ConfigurationTests.cpp InputTests.cpp LatticeTests.cpp)
+add_library(configuration_test_lib BondTests.cpp ConfigurationTests.cpp LatticeTests.cpp)
 target_include_directories(configuration_test_lib PUBLIC 
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_SOURCE_DIR}/src/configuration
-  ${CMAKE_SOURCE_DIR}/src/io
 )
