--- a/cpp/src/tests/io/CMakeLists.txt
+++ b/cpp/src/tests/io/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_library(io_test_lib dummy.cpp)
-target_include_directories(io_test_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(io_test_lib InputTests.cpp)
+target_include_directories(io_test_lib PUBLIC 
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_SOURCE_DIR}/src/io
+)
