--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -4,8 +4,8 @@
 add_executable(main main.cpp)
 
 # Add subdirectories
-add_subdirectory(algorithms)
 add_subdirectory(configuration)
+add_subdirectory(hamiltonians)
 add_subdirectory(io)
 add_subdirectory(models)
 add_subdirectory(utils)
@@ -14,8 +14,8 @@ add_subdirectory(tests)
 # Link with module libraries
 target_link_libraries(main
   PRIVATE
-    algorithms_lib
     configuration_lib
+    hamiltonians_lib
     io_lib
     models_lib
     utils_lib
@@ -25,9 +25,9 @@ target_link_libraries(main
 # Expose include directories for modules (optional)
 target_include_directories(main
   PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/algorithms
     ${CMAKE_CURRENT_SOURCE_DIR}/configuration
+    ${CMAKE_CURRENT_SOURCE_DIR}/hamiltonians
     ${CMAKE_CURRENT_SOURCE_DIR}/io
     ${CMAKE_CURRENT_SOURCE_DIR}/models
-    ${CMAKE_CURRENT_SOURCE_DIR}/utils
+    # ${CMAKE_CURRENT_SOURCE_DIR}/utils
 )
