--- a/cpp/src/utils/CMakeLists.txt
+++ b/cpp/src/utils/CMakeLists.txt
@@ -1,4 +1,7 @@
 # src/utils/CMakeLists.txt
 
-add_library(utils_lib dummy.cpp)
-target_include_directories(utils_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(utils_lib INTERFACE)
+
+target_include_directories(utils_lib INTERFACE 
+  ${CMAKE_CURRENT_SOURCE_DIR}
+)
