--- a/cpp/src/io/CMakeLists.txt
+++ b/cpp/src/io/CMakeLists.txt
@@ -3,5 +3,5 @@
 add_library(io_lib InputParser.cpp)
 target_include_directories(io_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(io_lib 
-  PRIVATE yaml-cpp
+  PUBLIC yaml-cpp utils_lib
 )
