--- a/cpp/src/configuration/CMakeLists.txt
+++ b/cpp/src/configuration/CMakeLists.txt
@@ -2,3 +2,6 @@
 
 add_library(configuration_lib Configuration.cpp Bond.cpp Lattice.cpp)
 target_include_directories(configuration_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(configuration_lib 
+  PUBLIC utils_lib io_lib
+)
