The execution framework will be stored in the /src/control directory in a series of classes.
The first class is the Driver class. It performs a series of sweeps until a stopping condition is met.

The second class is the Sweep class. This class handles looping through time groupings and proposing updates.

The third class is the Update class. This class handles the logic of randomly selecting accept/reject and insert/delete. It also calls Configuration public member functions to carry out the updates. In the future, the logic for the RANDOM hamiltonian will be moved to the hamiltonians directory along with other hamiltonian models, and Update will just handle the control logic.

--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(main main.cpp)
 
 # Add subdirectories
 add_subdirectory(configuration)
+add_subdirectory(control)
 add_subdirectory(hamiltonians)
 add_subdirectory(io)
 add_subdirectory(models)
@@ -15,6 +16,7 @@ add_subdirectory(utils)
 target_link_libraries(main
   PRIVATE
     configuration_lib
+    control_lib
     hamiltonians_lib
     io_lib
     models_lib
@@ -26,6 +28,7 @@ target_link_libraries(main
 target_include_directories(main
   PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/configuration
+    ${CMAKE_CURRENT_SOURCE_DIR}/control
     ${CMAKE_CURRENT_SOURCE_DIR}/hamiltonians
     ${CMAKE_CURRENT_SOURCE_DIR}/io
     ${CMAKE_CURRENT_SOURCE_DIR}/models
