--- a/cpp/scripts/examples/input_example.yaml
+++ b/cpp/scripts/examples/input_example.yaml
@@ -4,6 +4,7 @@ control:
   nbonds_stop_tol: 0.1
   scale_updates_per_sweep: 1
   max_sweeps: 100
+  init_num_time_groups: 5     # Initial number of time groups. 
   insert_prob: 0.5            # Prob of bond insert (vs. delete). 0 to 1.
 
 lattice:
@@ -26,7 +27,6 @@ lattice:
 configuration:
   float_tol: 1e-5
   beta: 70
-  num_time_groups_init: 5     # Initial number of time groups. Num groups will only change when max_num_time_groups ceases to be satisfied.
   max_nbonds_per_group: 30    # Maximum number of bonds there can be in a single group.
   bond_type_props:            # Will be defined internally in the future
     1: 10
