--- a/cpp/scripts/examples/input_example.yaml
+++ b/cpp/scripts/examples/input_example.yaml
@@ -1,18 +1,18 @@
 control:
-  hamil_model: random #*
-  stop_sweeps_patience: 3          #*
+  # hamil_model: random         ###########
+  stop_sweeps_patience: 3          
   stop_sweeps_tol: 0.1
   scale_num_updates: 1
   max_sweeps: 100
   init_num_time_groups: 5     # Initial number of time groups. 
 
-  accept_prob: 0.5            # Prob of accepting (vs. deleting) update. 0 to 1.
-  insert_prob: 0.5            # Prob of bond insert (vs. delete). 0 to 1.
+  # accept_prob: 0.5            ############ Prob of accepting (vs. deleting) update. 0 to 1.
+  # insert_prob: 0.5            ############ Prob of bond insert (vs. delete). 0 to 1.
 
 lattice:
   type: simple-cubic  
   dims: 1
-  a: 3.77945          #*      # in Bohr radii. 2.00 A.
+  a: 3.77945                  # in Bohr radii. 2.00 A.
   b: 3.77945
   c: 3.77945
   alpha: 1.57079632679        # Input in radians
@@ -20,21 +20,32 @@ lattice:
   gamma: 1.57079632679
 
   lims:
-    x:                #*
+    x:               
       bc_type: open           # Options are periodic and open
       min: 0.00       
       nsites: 100 
-
-configuration:
-  float_tol: 1e-5
-  beta: 70
-  max_nbonds_per_group: 30    # Maximum number of bonds there can be in a single group.
-  bond_type_props:            # Will be defined internally in the future
+  
+hamiltonian:
+  model: random
+  accept_prob: 0.5
+  insert_prob: 0.5
+  bond_type_props:
     1: 10
     2: 20
     3: 30
     4: 25
     5: 15
+
+configuration:
+  float_tol: 1e-5
+  beta: 70
+  max_nbonds_per_group: 30    # Maximum number of bonds there can be in a single group.
+  # bond_type_props:            ############ Will be defined internally in the future
+  #   1: 10
+  #   2: 20
+  #   3: 30
+  #   4: 25
+  #   5: 15
 
 consts:
   pi: 3.141592653589793
