Included some debugging flags for cmake so I can use the gdb debugger.
The assignFromMap template function unifies the identical logic being used in Input.hpp to read in/validate text fields that get converted to enums.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -9,4 +9,5 @@ find_package(yaml-cpp REQUIRED)
 
 add_subdirectory(src)
 
-
+# Flags so you can debug with gdb -tui ./main
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
