Instead of specifying the maximum number of bonds per group, we are just going to specify the average, defined as the total number of bonds diviided by the avg number of bonds. Because the taus object is constructued as a set, I can't access elements by index. Doing so would've allowed me to guarantee that no groups have more bonds than the cutoff. Changing the taus set to a vector would be counterproductive.
Initial sweep setup. Calculates newTauGroupStarts and numUpdatesPerGroup.

--- a/cpp/scripts/examples/input_example.yaml
+++ b/cpp/scripts/examples/input_example.yaml
@@ -35,7 +35,7 @@ hamiltonian:
 configuration:
   float_tol: 1e-5
   beta: 70
-  max_nbonds_per_group: 30    # Maximum number of bonds there can be in a single group.
+  avg_nbonds_per_group: 30    # Maximum number of bonds there can be in a single group.
 
 consts:
   pi: 3.141592653589793
