Update Template Class: I decided that the best structure for supporting various Hamiltonian models is to make Update a template class. This eliminates the need for a Hamiltonian generic or template class.
Driver and Sweep both now take the full InputParser::ParsedInput object instead of sub objects of it or various parameters. This is quite a bit simpler, more standardized, and gives those classes access to more information that they need (like hamiltonian model type).

--- a/cpp/src/hamiltonians/CMakeLists.txt
+++ b/cpp/src/hamiltonians/CMakeLists.txt
@@ -1,6 +1,6 @@
 # src/hamiltonians/CMakeLists.txt
 
-add_library(hamiltonians_lib Random.cpp)
+add_library(hamiltonians_lib Random.cpp TVModel.cpp)
 target_include_directories(hamiltonians_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(hamiltonians_lib
   PUBLIC io_lib utils_lib
