COMPILES: The previous commit had a lot of bugs that prevented compilation. Those have been addressed, and the code now compiles successfully. Most of the bugs involved include paths and linkers.

--- a/cpp/src/control/CMakeLists.txt
+++ b/cpp/src/control/CMakeLists.txt
@@ -1,7 +1,10 @@
 # src/control/CMakeLists.txt
 
 add_library(control_lib Driver.cpp Sweep.cpp)
-target_include_directories(control_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(control_lib PUBLIC 
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_SOURCE_DIR}/src/hamiltonians
+)
 target_link_libraries(control_lib 
-  PUBLIC configuration_lib io_lib utils_lib
+  PUBLIC configuration_lib hamiltonians_lib io_lib utils_lib
 )
