--- a/cpp/src/hamiltonians/CMakeLists.txt
+++ b/cpp/src/hamiltonians/CMakeLists.txt
@@ -1,7 +1,10 @@
 # src/hamiltonians/CMakeLists.txt
 
 add_library(hamiltonians_lib Random.cpp TVModel.cpp)
-target_include_directories(hamiltonians_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(hamiltonians_lib PUBLIC 
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_SOURCE_DIR}/src/configuration
+)
 target_link_libraries(hamiltonians_lib
   PUBLIC io_lib utils_lib
 )
