OutputInput: Created a new section that will handle an options for customizing output. Apart from write frequency and outdir name, other ideas for output customization are where to redirect std::cout, certain input files to create or not create, etc.

--- a/cpp/scripts/examples/input_example.yaml
+++ b/cpp/scripts/examples/input_example.yaml
@@ -5,6 +5,10 @@ control:
   max_sweeps: 100
   init_num_time_groups: 5     # Initial number of time groups. 
 
+output:
+  out_sweeps_patience: 20
+  out_dir: out
+
 lattice:
   type: simple-cubic
   dims: 1
