print_bonds_per_type: An input variable to control whether bondsPerType.dat is created.
restarts: An input variable to control whether restart files are written.

The applyUpdate function of TVModel needs to return the correct type.

--- a/cpp/scripts/examples/input_example.yaml
+++ b/cpp/scripts/examples/input_example.yaml
@@ -8,6 +8,8 @@ control:
 output:
   out_sweeps_patience: 20
   out_dir: out
+  print_bonds_per_type: true
+  restarts: true
 
 lattice:
   type: simple-cubic
