NOT TESTED FOR BUILD OR RUN.
Output: This commit contains much of the skeletal infrastructure for standard outputs, data outputs, and RESTART outputs without actually carrying out the details. Output is handled centrally in the Output class to avoid having output code scattered throughout the system.

Sweeps need to store their place in the iteration process (their id) so that caching in Output can be performed.

--- a/cpp/src/io/CMakeLists.txt
+++ b/cpp/src/io/CMakeLists.txt
@@ -1,6 +1,6 @@
 # src/io/CMakeLists.txt
 
-add_library(io_lib InputParser.cpp)
+add_library(io_lib InputParser.cpp Output.cpp)
 target_include_directories(io_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(io_lib 
   PUBLIC yaml-cpp utils_lib
