Output.cpp: The Output class needs access to the configuration so that it can write RESTART files. It only stores a reference to the object.

--- a/cpp/scripts/examples/input_example.yaml
+++ b/cpp/scripts/examples/input_example.yaml
@@ -9,8 +9,8 @@ control:
 output:
   out_sweeps_patience: 20
   out_dir: out
-  print_bonds_per_type: true
-  restarts: true
+  write_bonds_per_type: true
+  restarts: false
 
 lattice:
   type: simple-cubic
