Driver.cpp: The previous code versions did not write out the final, partially complete sweep cache. This version does this by forcing a final sweep write out and cache clearance, with a check to ensure stale data at the end of the cache vector is not included in the final writeout.
Output.cpp: writeRestartFile call moved to storeSweep to focus the writeAndClearSweepCache function on a single task. Also, writeRestartFile was incorrectly being called inside of a loop.

--- a/cpp/scripts/examples/input_example.yaml
+++ b/cpp/scripts/examples/input_example.yaml
@@ -8,7 +8,7 @@ control:
 
 output:
   out_sweeps_patience: 20
-  out_dir: out
+  out_dir: out #TODO: INCLUDE A FORCE OUTDIR CLEAR PARAM TO OVERWRITE. IF NOT TRUE, RUN ABORTS
   write_bonds_per_type: true
   restarts: false
 
