--- a/cpp/scripts/examples/input_example.yaml
+++ b/cpp/scripts/examples/input_example.yaml
@@ -42,7 +42,7 @@ hamiltonian:
 configuration:
   float_tol: 1e-5
   beta: 70
-  avg_nbonds_per_group: 30    # Maximum number of bonds there can be in a single group.
+  avg_nbonds_per_group: 30    # REMOVE THIS
 
 consts:
   pi: 3.141592653589793
