--- a/cpp/scripts/examples/input_example.yaml
+++ b/cpp/scripts/examples/input_example.yaml
@@ -2,8 +2,8 @@ control:
   equil_sweeps_patience: 3
   equil_sweeps_tol: 0.1
   scale_num_updates: 1
-  max_sweeps: 100  #TODO: Input option to keep num time groups fixed
-  init_num_time_groups: 5    #TODO: WHY DOES THE LAST TIME GROUP ALWAYS HAVE SO FEW BONDS IN IT? I THINK THAT THERE MIGHT BE AN ISSUE WITH TIME GROUP INDEX STARTING FROM 1 VERSUS 0. 
+  max_sweeps: 100  
+  num_time_groups: 5   
   random_seed: 0
 
 output:
