In this commit, I implement basic tests to ensure the LatticeBase pointer is usesable in all classes where it is needed. Subsequent commits will begin replacing the old Lattice objects with the new LatticeBase pointers.

--- a/cpp/src/control/CMakeLists.txt
+++ b/cpp/src/control/CMakeLists.txt
@@ -6,5 +6,5 @@ target_include_directories(control_lib PUBLIC
   ${CMAKE_SOURCE_DIR}/src/hamiltonians
 )
 target_link_libraries(control_lib 
-  PUBLIC configuration_lib hamiltonians_lib io_lib utils_lib
+  PUBLIC configuration_lib hamiltonians_lib io_lib lattices_lib utils_lib
 )
