Removed all references to the Lattice class, and renamed named all LatticeBase pointers named latticeNEW to lattice.

--- a/cpp/src/configuration/CMakeLists.txt
+++ b/cpp/src/configuration/CMakeLists.txt
@@ -1,6 +1,6 @@
 # src/configuration/CMakeLists.txt
 
-add_library(configuration_lib Configuration.cpp Bond.cpp Lattice.cpp)
+add_library(configuration_lib Configuration.cpp Bond.cpp)
 target_include_directories(configuration_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(configuration_lib 
   PUBLIC utils_lib io_lib
