Eigen3: This is the linear algebra package I am using for now. As my requirements change, I may look into other packages.
Configuration: Because the HSum matrix depends only on the bonds currently in the configuration (plus or minus a single bond), I made its computation a method of the Configuration class.

TVModel: There are several debug statements scattered throughout here right now. The problem is that the weights (Wk, Wkp1, Wkm1) are growing in magnitude and becoming large as the number of sweeps increases. I believe this to be a bug, or at least instability.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -5,6 +5,7 @@ project(fermion-bag-HLFT)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+find_package(Eigen3 3.3 REQUIRED)
 find_package(yaml-cpp REQUIRED)
 
 add_subdirectory(src)
