--- a/cpp/scripts/examples/input_example.yaml
+++ b/cpp/scripts/examples/input_example.yaml
@@ -29,15 +29,26 @@ lattice:
       nsites: 100 
   
 hamiltonian:
-  model: random
-  accept_prob: 0.5
+  # model: random
+  # accept_prob: 0.5   #TODO: REMOVE ACCEPT_PROB
+  # insert_prob: 0.5
+  # bond_type_props:
+    # 1: 0
+    # 2: 1
+    # 3: 0
+    # 4: 0
+    # 5: 0
+  model: tV
+  accept_prob: 0.5     #TODO: REMOVE ACCEPT_PROB
   insert_prob: 0.5
   bond_type_props:
-    1: 1
+    1: 0
     2: 1
     3: 0
     4: 0
     5: 0
+  t: 1 # Recommended: set t=1 as an energy unit. If not supplied, default t=1
+  V: 1 # If neither are supplied, assumed t=1 and V=0
 
 configuration:
   float_tol: 1e-5
