test.cpp: Created a test executable for debugging negative probabilities. These negative probabilities were the result of erroneous negative matrix determinants. The patches to those bugs will be described below.
Configuration.cpp: Line 188. If there are no bonds in configuration, the getHProd function was erroneously returning an identity matrix instead of a 0 matrix. I fixed this by checking that the configuration has more than 0 bonds. That function is permitted to proceed with 0 bonds only if Wkp1 is being computed, which means the proposal is an insertion.

TVModelNEW.cpp: This commit is littered with debug statements, interspersed wth substantive changes. I hestitate to remove the debug statements until I am sure they no longer have any use. Instead of multiplying/dividing by omega^k within the calculation of W factors, I avoid massive numbers and loss of precision by waiting to handle omega's until after Wk, and (Wkm1 or Wkp1) have calculated. Then, a single factor of omega is multiplied/divided directly to/from the ratio R. I also discovered that the functional definitions for sinh2alpha and cosh2alpha were swapped with one another. This was one factor contributing to negative determinants. The other was loss of precision due to large numbers, which is unavoidable using this method.

Input.hpp: The nsites inputs should be integers. I put off making the change to int's until I can determine why I made these doubles in the first place.

--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -35,3 +35,31 @@ target_include_directories(main
     ${CMAKE_CURRENT_SOURCE_DIR}/lattices
     ${CMAKE_CURRENT_SOURCE_DIR}/utils
 )
+
+
+# Define a test executable
+add_executable(test test.cpp)
+
+# Link with module libraries
+target_link_libraries(test
+  PRIVATE
+    configuration_lib
+    control_lib
+    Eigen3::Eigen
+    hamiltonians_lib
+    io_lib
+    lattices_lib
+    utils_lib
+    yaml-cpp
+)
+
+# Expose include directories for modules (optional)
+target_include_directories(test
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/configuration
+    ${CMAKE_CURRENT_SOURCE_DIR}/control
+    ${CMAKE_CURRENT_SOURCE_DIR}/hamiltonians
+    ${CMAKE_CURRENT_SOURCE_DIR}/io
+    ${CMAKE_CURRENT_SOURCE_DIR}/lattices
+    ${CMAKE_CURRENT_SOURCE_DIR}/utils
+)
