Input Scripts: I changed the structure of the example input scripts folder to give more flexibility and specialization. Will be useful now as I transition to 2D lattices and in the future as I need to demonstrate more examples.
Input.hpp: I included y and z parameters in the yaml conversion definition, implemented validation functions for the two and three dimensional inputs, and updated the << operator for the LatticeInput class in order to include information about the other dimensions. The code is very "space conservative", but it is fairly straightforward. I think a bit of repetition in Input code is ok because there will probably be many divergence points from the standard situation in the future. I can always come back and condense this if needed.

--- a/cpp/scripts/examples/simple-cubic/tV-2D.yaml
+++ b/cpp/scripts/examples/simple-cubic/tV-2D.yaml
@@ -10,11 +10,11 @@ output:
   out_sweeps_patience: 20
   out_dir: out #TODO: INCLUDE A FORCE OUTDIR CLEAR PARAM TO OVERWRITE. IF NOT TRUE, RUN ABORTS
   write_bonds_per_type: true
-  restarts: false
+  restarts: true
 
 lattice:
   type: simple-cubic
-  dims: 1
+  dims: 2
   a: 3.77945                  # in Bohr radii. 2.00 A.
   b: 3.77945
   c: 3.77945
@@ -27,6 +27,10 @@ lattice:
       bc_type: open           # Options are periodic and open
       min: 0.00       
       nsites: 100 
+    y: 
+      bc_type: open
+      min: 0.00
+      nsites: 100
   
 hamiltonian:
   # model: random
@@ -52,8 +56,4 @@ hamiltonian:
 
 configuration:
   float_tol: 1e-5
-  beta: 70
-
-consts:
-  pi: 3.141592653589793
-  pid2: 1.57079632679
+  beta: 5
