Replace RandomNEW with Random in all cases.

--- a/cpp/src/hamiltonians/CMakeLists.txt
+++ b/cpp/src/hamiltonians/CMakeLists.txt
@@ -1,6 +1,6 @@
 # src/hamiltonians/CMakeLists.txt
 
-add_library(hamiltonians_lib HamiltonianBase.cpp RandomNEW.cpp TVModel.cpp)
+add_library(hamiltonians_lib HamiltonianBase.cpp Random.cpp TVModel.cpp)
 target_include_directories(hamiltonians_lib PUBLIC 
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_SOURCE_DIR}/src/configuration
