--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -37,29 +37,29 @@ target_include_directories(main
 )
 
 
-# Define a test executable
-add_executable(test test.cpp)
+# # Define a test executable
+# add_executable(test test.cpp)
 
-# Link with module libraries
-target_link_libraries(test
-  PRIVATE
-    configuration_lib
-    control_lib
-    Eigen3::Eigen
-    hamiltonians_lib
-    io_lib
-    lattices_lib
-    utils_lib
-    yaml-cpp
-)
+# # Link with module libraries
+# target_link_libraries(test
+  # PRIVATE
+    # configuration_lib
+    # control_lib
+    # Eigen3::Eigen
+    # hamiltonians_lib
+    # io_lib
+    # lattices_lib
+    # utils_lib
+    # yaml-cpp
+# )
 
-# Expose include directories for modules (optional)
-target_include_directories(test
-  PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/configuration
-    ${CMAKE_CURRENT_SOURCE_DIR}/control
-    ${CMAKE_CURRENT_SOURCE_DIR}/hamiltonians
-    ${CMAKE_CURRENT_SOURCE_DIR}/io
-    ${CMAKE_CURRENT_SOURCE_DIR}/lattices
-    ${CMAKE_CURRENT_SOURCE_DIR}/utils
-)
+# # Expose include directories for modules (optional)
+# target_include_directories(test
+  # PRIVATE
+    # ${CMAKE_CURRENT_SOURCE_DIR}/configuration
+    # ${CMAKE_CURRENT_SOURCE_DIR}/control
+    # ${CMAKE_CURRENT_SOURCE_DIR}/hamiltonians
+    # ${CMAKE_CURRENT_SOURCE_DIR}/io
+    # ${CMAKE_CURRENT_SOURCE_DIR}/lattices
+    # ${CMAKE_CURRENT_SOURCE_DIR}/utils
+# )
