Build success, no run testing. scripts/examples: I changed some values in the example SC input files to be more representative of a default situation. I also created a basic HC input file.
SiteBase: Because the child Site structs are so similar, I just implemented a << operator in the SiteBase struct. Additionally, you can't define << operator as a virtual function, so it would be a little more tricky to implement different << functionality for the two child structs anyways.

Sweep.cpp: BUG DISCOVERY. The function that calculates the number of updates was using the 1D method to get the number of sites in the lattice, regardless of the number of dimensions of the problem. This decreased the number of updates per sweep. Additionally, calcNumUpdatesPerGroup forces at least 1 update per sweep. I am not sure if this could be the cause of the higher than expected mean nbonds at low beta.

Input: The Honeycomb input validation closely mirrors validation for SC, so I renamed validate1DSC to validateOneDim and reused it in HC validation.

Honeycomb: The createHoneycomb function is virtually identical to SimpleCubic's createSimpleCubid function. Remember not to accidentally move sites from the child classes into LatticeBase in the future. They are different, because they are vectors of DIFFERENT Site structs.

LatticeBase: getBoundType was identical for both child classes.

--- a/cpp/scripts/examples/simple-cubic/tV-3D.yaml
+++ b/cpp/scripts/examples/simple-cubic/tV-3D.yaml
@@ -14,7 +14,7 @@ output:
 
 lattice:
   type: simple-cubic
-  dims: 2
+  dims: 3
   a: 3.77945                  # in Bohr radii. 2.00 A.
   b: 3.77945
   c: 3.77945
@@ -26,11 +26,15 @@ lattice:
     x:               
       bc_type: open           # Options are periodic and open
       min: 0.00       
-      nsites: 10
+      nsites: 4 
     y: 
       bc_type: open
       min: 0.00
-      nsites: 10
+      nsites: 4
+    z:
+      bc_type: open
+      min: 0.00
+      nsites: 4
   
 hamiltonian:
   # model: random
