--- a/cpp/scripts/examples/honeycomb/tV-HC.yaml
+++ b/cpp/scripts/examples/honeycomb/tV-HC.yaml
@@ -13,24 +13,24 @@ output:
   restarts: true
 
 lattice:
-  type: simple-cubic
+  type: honeycomb
   dims: 2
   a: 3.77945                  # in Bohr radii. 2.00 A.
-  b: 3.77945
-  c: 3.77945
-  alpha: 1.57079632679        # Input in radians
-  beta: 1.57079632679
-  gamma: 1.57079632679
+  # b: 3.77945
+  # c: 3.77945
+  # alpha: 1.57079632679        # Input in radians
+  # beta: 1.57079632679
+  # gamma: 1.57079632679
 
   lims:
     x:               
       bc_type: open           # Options are periodic and open
-      min: 0.00       
-      nsites: 10
-    y: 
+      min: 0.00
+      nsites: 7
+    y:
       bc_type: open
       min: 0.00
-      nsites: 10
+      nsites: 7
   
 hamiltonian:
   # model: random
@@ -44,7 +44,7 @@ hamiltonian:
     4: 0
     5: 0
   t: 1 # Recommended: set t=1 as an energy unit. If not supplied, default t=1
-  V: 1.3 # If neither are supplied, assumed t=1 and V=0
+  V: 1.3 # If neither are supplied, assumed t=1 and V=1.3
 
 configuration:
   float_tol: 1e-5
